--- a/style.css
+++ b/style.css
@@ -1,42 +1,107 @@
-body {
+body{
     background-image: url("https://kq-storage.s3.ap-south-1.amazonaws.com/Github/astronaut/sky-moon-bg%5B1%5D.png");
     width: 100vw;
     height: 100vh;
-    background-size: 100% 100%;
-    overflow : hidden;
-
+    background-size: 100%;
+    overflow: hidden;
 }
-
-#astrounaut1 {
+#Astronaut-1{
     width: 500px;
     position: absolute;
     top: 5%;
     left: 5%;
     animation: floating 5s infinite;
 }
-
-@keyframes floating {
+ @keyframes floating {
     0%{
         transform: translateY(0px);
     }
     50%{
-        transform: translateY(50px);
+        transform: translateY(30px);
     }
 }
 
-#astrounaut2 {
-    width: 500px;
+#Astronaut-2{
+    width: 450px;
     position: absolute;
-    bottom: 5%;
+    top: 35%;
     left: 30%;
-    animation: floating 5s infinite;
+    animation: floating 4s infinite;
 }
-
 @keyframes floating {
     0%{
         transform: translateY(0px);
     }
     50%{
-        transform: translateY(50px);
+        transform: translateY(40px);
     }
 }
+
+ form{
+    height: 550px;
+    position: absolute;
+    top: 15%;
+    left: 63%;
+    width: 350px;
+    padding: 0 75px;
+    background-color: white;
+    border-radius: 5px
+ }
+
+.block-display{
+    display: block
+}
+  @import url(<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">);
+
+  body{
+    font-family: 'Poppins', sans-serif;
+  }
+  label{
+    font-size: 16px;
+    margin: 20px 0 4px 0;
+  }
+
+  #finalbutton{
+    background-color: rgb(229, 122, 35);
+    color: rgb(250, 246, 246);
+    border-radius: 20px;
+    padding: 15px 20px;
+    border:  none;
+    margin:40px auto ;
+    position: relative;
+    left: 90px;
+  }
+  h1{
+    text-align: center;
+    margin: 20px auto;
+    width: 270px;
+    font-size: 26px;
+  }
+
+  input[type="text"], input[type="email"], select{
+    width: 300px;
+    height: 40px;
+    border: 1px solid black;
+    padding: 0 5px;
+  }
+  
+  #RocketDrifting{
+    height: 12%;
+    position: relative;
+    left: 600px;
+    top: 16%;
+    animation: rotate 100s infinite;
+   }
+  
+   @keyframes rotate {
+    0%{
+      transform: rotate(0deg);
+    }
+    100%{
+      transform: rotateZ(7200deg);
+    }
+   } 
+
+  
